test/compare/testdata/fixedbugs/issue340c.go
// errorcheck

package main

var x = nil // ERROR `use of untyped nil`

func main() {}
